[FIX] fixed some popup content that was overflowing from container

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -3014,6 +3014,13 @@ body.fullscreen.tiki.navbar-padding {
 .tiki .popover p:last-child {
   margin-bottom: 0; }
 
+.tiki .popover {
+  max-width: 301px; }
+  .tiki .popover .popover-body .table {
+    margin-bottom: 0; }
+  .tiki .popover .popover-body .table td {
+    word-break: break-word; }
+
 .tiki .media-overflow-visible, .tiki .media-overflow-visible .media-body {
   overflow: visible; }
 
